PROYECTO-OLC2/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> init
Rule 1     init -> statements
Rule 2     statements -> statements statement
Rule 3     statements -> statement
Rule 4     statement -> create_database_statement SEMICOLON
Rule 5     statement -> use_statement SEMICOLON
Rule 6     statement -> declare_statement SEMICOLON
Rule 7     statement -> set_statement SEMICOLON
Rule 8     statement -> create_table_statement SEMICOLON
Rule 9     statement -> select_statement SEMICOLON
Rule 10    statement -> insert_statement SEMICOLON
Rule 11    statement -> create_function_statement SEMICOLON
Rule 12    statement -> create_procedure_statement SEMICOLON
Rule 13    statement -> call_function_statement SEMICOLON
Rule 14    statement -> alter_table_statement SEMICOLON
Rule 15    statement -> if_statement SEMICOLON
Rule 16    statement -> exec_statement SEMICOLON
Rule 17    statement -> drop_table_statement SEMICOLON
Rule 18    statement -> update_statement SEMICOLON
Rule 19    statement -> while_statement SEMICOLON
Rule 20    statement -> truncate_statement SEMICOLON
Rule 21    statement -> return_statement SEMICOLON
Rule 22    statement -> delete_statement SEMICOLON
Rule 23    create_database_statement -> CREATE DATA BASE NAME
Rule 24    use_statement -> USE NAME
Rule 25    declare_statement -> DECLARE ID AS type
Rule 26    declare_statement -> DECLARE ID type
Rule 27    set_statement -> SET assignments
Rule 28    assignments -> assignments COMMA ID ASSIGN a
Rule 29    assignments -> ID ASSIGN a
Rule 30    create_table_statement -> CREATE TABLE NAME L_PAREN properties R_PAREN
Rule 31    properties -> properties COMMA property
Rule 32    properties -> property
Rule 33    property -> NAME type null_prod PRIMARY KEY
Rule 34    property -> NAME type null_prod
Rule 35    property -> NAME type null_prod REFERENCE NAME L_PAREN NAME R_PAREN
Rule 36    null_prod -> NOT NULL
Rule 37    null_prod -> NULL
Rule 38    null_prod -> <empty>
Rule 39    select_statement -> SELECT columns FROM NAME
Rule 40    select_statement -> SELECT columns FROM NAME WHERE a
Rule 41    insert_statement -> INSERT INTO NAME L_PAREN columns R_PAREN VALUES L_PAREN vals R_PAREN
Rule 42    columns -> columns COMMA column
Rule 43    columns -> columns COMMA column POINT column
Rule 44    columns -> column POINT column
Rule 45    columns -> column
Rule 46    column -> TIMES
Rule 47    column -> NAME
Rule 48    column -> case_statement
Rule 49    column -> call_function_statement
Rule 50    column -> if_statement NAME
Rule 51    column -> a NAME
Rule 52    vals -> vals COMMA a
Rule 53    vals -> a
Rule 54    create_function_statement -> CREATE FUNCTION NAME L_PAREN parameters R_PAREN RETURN type AS BEGIN statements END
Rule 55    create_function_statement -> CREATE FUNCTION NAME L_PAREN R_PAREN RETURN type AS BEGIN statements END
Rule 56    create_procedure_statement -> CREATE PROCEDURE NAME L_PAREN parameters R_PAREN AS BEGIN statements END
Rule 57    create_procedure_statement -> CREATE PROCEDURE NAME L_PAREN R_PAREN AS BEGIN statements END
Rule 58    parameters -> parameters COMMA ID AS type
Rule 59    parameters -> parameters COMMA ID type
Rule 60    parameters -> ID type
Rule 61    parameters -> ID AS type
Rule 62    alter_table_statement -> ALTER TABLE NAME ADD COLUMN NAME type
Rule 63    alter_table_statement -> ALTER TABLE NAME DROP COLUMN NAME
Rule 64    if_statement -> IF a THEN statements END IF
Rule 65    if_statement -> IF a THEN statements ELSE statements END IF
Rule 66    if_statement -> IF L_PAREN a COMMA a COMMA a R_PAREN
Rule 67    exec_statement -> EXEC NAME vals
Rule 68    exec_statement -> EXEC NAME args
Rule 69    exec_statement -> EXEC NAME
Rule 70    args -> args COMMA ID ASSIGN a
Rule 71    args -> ID ASSIGN a
Rule 72    drop_table_statement -> DROP TABLE NAME
Rule 73    update_statement -> UPDATE NAME SET column_assignments WHERE a
Rule 74    column_assignments -> column_assignments COMMA NAME ASSIGN a
Rule 75    column_assignments -> NAME ASSIGN a
Rule 76    while_statement -> WHILE a BEGIN statements END
Rule 77    truncate_statement -> TRUNCATE TABLE NAME
Rule 78    delete_statement -> DELETE FROM NAME WHERE a
Rule 79    case_statement -> CASE when_statements END NAME
Rule 80    when_statements -> WHEN a THEN a when_statements
Rule 81    when_statements -> ELSE THEN a
Rule 82    type -> INT
Rule 83    type -> DECIMAL
Rule 84    type -> DATE
Rule 85    type -> DATETIME
Rule 86    type -> NCHAR L_PAREN a R_PAREN
Rule 87    type -> NVARCHAR L_PAREN a R_PAREN
Rule 88    a -> a OR b
Rule 89    a -> b
Rule 90    b -> b AND c
Rule 91    b -> c
Rule 92    c -> NOT_SIGN d
Rule 93    c -> d
Rule 94    d -> d EQUALS e
Rule 95    d -> d NOT_EQ e
Rule 96    d -> d LESS_THAN e
Rule 97    d -> d GREATER_THAN e
Rule 98    d -> d LESS_EQ e
Rule 99    d -> d GREATER_EQ e
Rule 100   d -> e
Rule 101   e -> e PLUS f
Rule 102   e -> e MINUS f
Rule 103   e -> f
Rule 104   f -> f TIMES g
Rule 105   f -> f DIVIDE g
Rule 106   f -> g
Rule 107   g -> MINUS h
Rule 108   g -> h
Rule 109   h -> INTEGER_VALUE
Rule 110   h -> DECIMAL_VALUE
Rule 111   h -> STRING
Rule 112   h -> ID
Rule 113   h -> NAME
Rule 114   h -> L_PAREN a R_PAREN
Rule 115   h -> exec_statement
Rule 116   h -> call_function_statement
Rule 117   call_function_statement -> function_name_prod L_PAREN vals R_PAREN
Rule 118   call_function_statement -> function_name_prod L_PAREN R_PAREN
Rule 119   call_function_statement -> CAS L_PAREN a AS type R_PAREN
Rule 120   function_name_prod -> HOY
Rule 121   function_name_prod -> CONCATENA
Rule 122   function_name_prod -> SUBSTRAER
Rule 123   function_name_prod -> CONTAR
Rule 124   function_name_prod -> SUMA
Rule 125   return_statement -> RETURN a

Terminals, with rules where they appear

ADD                  : 62
ALTER                : 62 63
AND                  : 90
AS                   : 25 54 55 56 57 58 61 119
ASSIGN               : 28 29 70 71 74 75
BASE                 : 23
BEGIN                : 54 55 56 57 76
CAS                  : 119
CASE                 : 79
COLUMN               : 62 63
COMMA                : 28 31 42 43 52 58 59 66 66 70 74
CONCATENA            : 121
CONTAR               : 123
CREATE               : 23 30 54 55 56 57
DATA                 : 23
DATE                 : 84
DATETIME             : 85
DECIMAL              : 83
DECIMAL_VALUE        : 110
DECLARE              : 25 26
DELETE               : 78
DIVIDE               : 105
DROP                 : 63 72
ELSE                 : 65 81
END                  : 54 55 56 57 64 65 76 79
EQUALS               : 94
EXEC                 : 67 68 69
FROM                 : 39 40 78
FUNCTION             : 54 55
GREATER_EQ           : 99
GREATER_THAN         : 97
HOY                  : 120
ID                   : 25 26 28 29 58 59 60 61 70 71 112
IF                   : 64 64 65 65 66
INSERT               : 41
INT                  : 82
INTEGER_VALUE        : 109
INTO                 : 41
KEY                  : 33
LESS_EQ              : 98
LESS_THAN            : 96
L_PAREN              : 30 35 41 41 54 55 56 57 66 86 87 114 117 118 119
MINUS                : 102 107
NAME                 : 23 24 30 33 34 35 35 35 39 40 41 47 50 51 54 55 56 57 62 62 63 63 67 68 69 72 73 74 75 77 78 79 113
NCHAR                : 86
NOT                  : 36
NOT_EQ               : 95
NOT_SIGN             : 92
NULL                 : 36 37
NVARCHAR             : 87
OR                   : 88
PLUS                 : 101
POINT                : 43 44
PRIMARY              : 33
PROCEDURE            : 56 57
REFERENCE            : 35
RETURN               : 54 55 125
R_PAREN              : 30 35 41 41 54 55 56 57 66 86 87 114 117 118 119
SELECT               : 39 40
SEMICOLON            : 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22
SET                  : 27 73
STRING               : 111
SUBSTRAER            : 122
SUMA                 : 124
TABLE                : 30 62 63 72 77
THEN                 : 64 65 80 81
TIMES                : 46 104
TRUNCATE             : 77
UPDATE               : 73
USE                  : 24
VALUES               : 41
WHEN                 : 80
WHERE                : 40 73 78
WHILE                : 76
error                : 

Nonterminals, with rules where they appear

a                    : 28 29 40 51 52 53 64 65 66 66 66 70 71 73 74 75 76 78 80 80 81 86 87 88 114 119 125
alter_table_statement : 14
args                 : 68 70
assignments          : 27 28
b                    : 88 89 90
c                    : 90 91
call_function_statement : 13 49 116
case_statement       : 48
column               : 42 43 43 44 44 45
column_assignments   : 73 74
columns              : 39 40 41 42 43
create_database_statement : 4
create_function_statement : 11
create_procedure_statement : 12
create_table_statement : 8
d                    : 92 93 94 95 96 97 98 99
declare_statement    : 6
delete_statement     : 22
drop_table_statement : 17
e                    : 94 95 96 97 98 99 100 101 102
exec_statement       : 16 115
f                    : 101 102 103 104 105
function_name_prod   : 117 118
g                    : 104 105 106
h                    : 107 108
if_statement         : 15 50
init                 : 0
insert_statement     : 10
null_prod            : 33 34 35
parameters           : 54 56 58 59
properties           : 30 31
property             : 31 32
return_statement     : 21
select_statement     : 9
set_statement        : 7
statement            : 2 3
statements           : 1 2 54 55 56 57 64 65 65 76
truncate_statement   : 20
type                 : 25 26 33 34 35 54 55 58 59 60 61 62 119
update_statement     : 18
use_statement        : 5
vals                 : 41 52 67 117
when_statements      : 79 80
while_statement      : 19

Parsing method: LALR

state 0

    (0) S' -> . init
    (1) init -> . statements
    (2) statements -> . statements statement
    (3) statements -> . statement
    (4) statement -> . create_database_statement SEMICOLON
    (5) statement -> . use_statement SEMICOLON
    (6) statement -> . declare_statement SEMICOLON
    (7) statement -> . set_statement SEMICOLON
    (8) statement -> . create_table_statement SEMICOLON
    (9) statement -> . select_statement SEMICOLON
    (10) statement -> . insert_statement SEMICOLON
    (11) statement -> . create_function_statement SEMICOLON
    (12) statement -> . create_procedure_statement SEMICOLON
    (13) statement -> . call_function_statement SEMICOLON
    (14) statement -> . alter_table_statement SEMICOLON
    (15) statement -> . if_statement SEMICOLON
    (16) statement -> . exec_statement SEMICOLON
    (17) statement -> . drop_table_statement SEMICOLON
    (18) statement -> . update_statement SEMICOLON
    (19) statement -> . while_statement SEMICOLON
    (20) statement -> . truncate_statement SEMICOLON
    (21) statement -> . return_statement SEMICOLON
    (22) statement -> . delete_statement SEMICOLON
    (23) create_database_statement -> . CREATE DATA BASE NAME
    (24) use_statement -> . USE NAME
    (25) declare_statement -> . DECLARE ID AS type
    (26) declare_statement -> . DECLARE ID type
    (27) set_statement -> . SET assignments
    (30) create_table_statement -> . CREATE TABLE NAME L_PAREN properties R_PAREN
    (39) select_statement -> . SELECT columns FROM NAME
    (40) select_statement -> . SELECT columns FROM NAME WHERE a
    (41) insert_statement -> . INSERT INTO NAME L_PAREN columns R_PAREN VALUES L_PAREN vals R_PAREN
    (54) create_function_statement -> . CREATE FUNCTION NAME L_PAREN parameters R_PAREN RETURN type AS BEGIN statements END
    (55) create_function_statement -> . CREATE FUNCTION NAME L_PAREN R_PAREN RETURN type AS BEGIN statements END
    (56) create_procedure_statement -> . CREATE PROCEDURE NAME L_PAREN parameters R_PAREN AS BEGIN statements END
    (57) create_procedure_statement -> . CREATE PROCEDURE NAME L_PAREN R_PAREN AS BEGIN statements END
    (117) call_function_statement -> . function_name_prod L_PAREN vals R_PAREN
    (118) call_function_statement -> . function_name_prod L_PAREN R_PAREN
    (119) call_function_statement -> . CAS L_PAREN a AS type R_PAREN
    (62) alter_table_statement -> . ALTER TABLE NAME ADD COLUMN NAME type
    (63) alter_table_statement -> . ALTER TABLE NAME DROP COLUMN NAME
    (64) if_statement -> . IF a THEN statements END IF
    (65) if_statement -> . IF a THEN statements ELSE statements END IF
    (66) if_statement -> . IF L_PAREN a COMMA a COMMA a R_PAREN
    (67) exec_statement -> . EXEC NAME vals
    (68) exec_statement -> . EXEC NAME args
    (69) exec_statement -> . EXEC NAME
    (72) drop_table_statement -> . DROP TABLE NAME
    (73) update_statement -> . UPDATE NAME SET column_assignments WHERE a
    (76) while_statement -> . WHILE a BEGIN statements END
    (77) truncate_statement -> . TRUNCATE TABLE NAME
    (125) return_statement -> . RETURN a
    (78) delete_statement -> . DELETE FROM NAME WHERE a
    (120) function_name_prod -> . HOY
    (121) function_name_prod -> . CONCATENA
    (122) function_name_prod -> . SUBSTRAER
    (123) function_name_prod -> . CONTAR
    (124) function_name_prod -> . SUMA

    CREATE          shift and go to state 23
    USE             shift and go to state 24
    DECLARE         shift and go to state 25
    SET             shift and go to state 26
    SELECT          shift and go to state 27
    INSERT          shift and go to state 28
    CAS             shift and go to state 31
    ALTER           shift and go to state 32
    IF              shift and go to state 34
    EXEC            shift and go to state 35
    DROP            shift and go to state 33
    UPDATE          shift and go to state 36
    WHILE           shift and go to state 37
    TRUNCATE        shift and go to state 38
    RETURN          shift and go to state 29
    DELETE          shift and go to state 39
    HOY             shift and go to state 40
    CONCATENA       shift and go to state 41
    SUBSTRAER       shift and go to state 42
    CONTAR          shift and go to state 43
    SUMA            shift and go to state 44

    init                           shift and go to state 1
    statements                     shift and go to state 2
    statement                      shift and go to state 3
    create_database_statement      shift and go to state 4
    use_statement                  shift and go to state 5
    declare_statement              shift and go to state 6
    set_statement                  shift and go to state 7
    create_table_statement         shift and go to state 8
    select_statement               shift and go to state 9
    insert_statement               shift and go to state 10
    create_function_statement      shift and go to state 11
    create_procedure_statement     shift and go to state 12
    call_function_statement        shift and go to state 13
    alter_table_statement          shift and go to state 14
    if_statement                   shift and go to state 15
    exec_statement                 shift and go to state 16
    drop_table_statement           shift and go to state 17
    update_statement               shift and go to state 18
    while_statement                shift and go to state 19
    truncate_statement             shift and go to state 20
    return_statement               shift and go to state 21
    delete_statement               shift and go to state 22
    function_name_prod             shift and go to state 30

state 1

    (0) S' -> init .



state 2

    (1) init -> statements .
    (2) statements -> statements . statement
    (4) statement -> . create_database_statement SEMICOLON
    (5) statement -> . use_statement SEMICOLON
    (6) statement -> . declare_statement SEMICOLON
    (7) statement -> . set_statement SEMICOLON
    (8) statement -> . create_table_statement SEMICOLON
    (9) statement -> . select_statement SEMICOLON
    (10) statement -> . insert_statement SEMICOLON
    (11) statement -> . create_function_statement SEMICOLON
    (12) statement -> . create_procedure_statement SEMICOLON
    (13) statement -> . call_function_statement SEMICOLON
    (14) statement -> . alter_table_statement SEMICOLON
    (15) statement -> . if_statement SEMICOLON
    (16) statement -> . exec_statement SEMICOLON
    (17) statement -> . drop_table_statement SEMICOLON
    (18) statement -> . update_statement SEMICOLON
    (19) statement -> . while_statement SEMICOLON
    (20) statement -> . truncate_statement SEMICOLON
    (21) statement -> . return_statement SEMICOLON
    (22) statement -> . delete_statement SEMICOLON
    (23) create_database_statement -> . CREATE DATA BASE NAME
    (24) use_statement -> . USE NAME
    (25) declare_statement -> . DECLARE ID AS type
    (26) declare_statement -> . DECLARE ID type
    (27) set_statement -> . SET assignments
    (30) create_table_statement -> . CREATE TABLE NAME L_PAREN properties R_PAREN
    (39) select_statement -> . SELECT columns FROM NAME
    (40) select_statement -> . SELECT columns FROM NAME WHERE a
    (41) insert_statement -> . INSERT INTO NAME L_PAREN columns R_PAREN VALUES L_PAREN vals R_PAREN
    (54) create_function_statement -> . CREATE FUNCTION NAME L_PAREN parameters R_PAREN RETURN type AS BEGIN statements END
    (55) create_function_statement -> . CREATE FUNCTION NAME L_PAREN R_PAREN RETURN type AS BEGIN statements END
    (56) create_procedure_statement -> . CREATE PROCEDURE NAME L_PAREN parameters R_PAREN AS BEGIN statements END
    (57) create_procedure_statement -> . CREATE PROCEDURE NAME L_PAREN R_PAREN AS BEGIN statements END
    (117) call_function_statement -> . function_name_prod L_PAREN vals R_PAREN
    (118) call_function_statement -> . function_name_prod L_PAREN R_PAREN
    (119) call_function_statement -> . CAS L_PAREN a AS type R_PAREN
    (62) alter_table_statement -> . ALTER TABLE NAME ADD COLUMN NAME type
    (63) alter_table_statement -> . ALTER TABLE NAME DROP COLUMN NAME
    (64) if_statement -> . IF a THEN statements END IF
    (65) if_statement -> . IF a THEN statements ELSE statements END IF
    (66) if_statement -> . IF L_PAREN a COMMA a COMMA a R_PAREN
    (67) exec_statement -> . EXEC NAME vals
    (68) exec_statement -> . EXEC NAME args
    (69) exec_statement -> . EXEC NAME
    (72) drop_table_statement -> . DROP TABLE NAME
    (73) update_statement -> . UPDATE NAME SET column_assignments WHERE a
    (76) while_statement -> . WHILE a BEGIN statements END
    (77) truncate_statement -> . TRUNCATE TABLE NAME
    (125) return_statement -> . RETURN a
    (78) delete_statement -> . DELETE FROM NAME WHERE a
    (120) function_name_prod -> . HOY
    (121) function_name_prod -> . CONCATENA
    (122) function_name_prod -> . SUBSTRAER
    (123) function_name_prod -> . CONTAR
    (124) function_name_prod -> . SUMA

    $end            reduce using rule 1 (init -> statements .)
    CREATE          shift and go to state 23
    USE             shift and go to state 24
    DECLARE         shift and go to state 25
    SET             shift and go to state 26
    SELECT          shift and go to state 27
    INSERT          shift and go to state 28
    CAS             shift and go to state 31
    ALTER           shift and go to state 32
    IF              shift and go to state 34
    EXEC            shift and go to state 35
    DROP            shift and go to state 33
    UPDATE          shift and go to state 36
    WHILE           shift and go to state 37
    TRUNCATE        shift and go to state 38
    RETURN          shift and go to state 29
    DELETE          shift and go to state 39
    HOY             shift and go to state 40
    CONCATENA       shift and go to state 41
    SUBSTRAER       shift and go to state 42
    CONTAR          shift and go to state 43
    SUMA            shift and go to state 44

    statement                      shift and go to state 45
    create_database_statement      shift and go to state 4
    use_statement                  shift and go to state 5
    declare_statement              shift and go to state 6
    set_statement                  shift and go to state 7
    create_table_statement         shift and go to state 8
    select_statement               shift and go to state 9
    insert_statement               shift and go to state 10
    create_function_statement      shift and go to state 11
    create_procedure_statement     shift and go to state 12
    call_function_statement        shift and go to state 13
    alter_table_statement          shift and go to state 14
    if_statement                   shift and go to state 15
    exec_statement                 shift and go to state 16
    drop_table_statement           shift and go to state 17
    update_statement               shift and go to state 18
    while_statement                shift and go to state 19
    truncate_statement             shift and go to state 20
    return_statement               shift and go to state 21
    delete_statement               shift and go to state 22
    function_name_prod             shift and go to state 30

state 3

    (3) statements -> statement .

    CREATE          reduce using rule 3 (statements -> statement .)
    USE             reduce using rule 3 (statements -> statement .)
    DECLARE         reduce using rule 3 (statements -> statement .)
    SET             reduce using rule 3 (statements -> statement .)
    SELECT          reduce using rule 3 (statements -> statement .)
    INSERT          reduce using rule 3 (statements -> statement .)
    CAS             reduce using rule 3 (statements -> statement .)
    ALTER           reduce using rule 3 (statements -> statement .)
    IF              reduce using rule 3 (statements -> statement .)
    EXEC            reduce using rule 3 (statements -> statement .)
    DROP            reduce using rule 3 (statements -> statement .)
    UPDATE          reduce using rule 3 (statements -> statement .)
    WHILE           reduce using rule 3 (statements -> statement .)
    TRUNCATE        reduce using rule 3 (statements -> statement .)
    RETURN          reduce using rule 3 (statements -> statement .)
    DELETE          reduce using rule 3 (statements -> statement .)
    HOY             reduce using rule 3 (statements -> statement .)
    CONCATENA       reduce using rule 3 (statements -> statement .)
    SUBSTRAER       reduce using rule 3 (statements -> statement .)
    CONTAR          reduce using rule 3 (statements -> statement .)
    SUMA            reduce using rule 3 (statements -> statement .)
    $end            reduce using rule 3 (statements -> statement .)
    END             reduce using rule 3 (statements -> statement .)
    ELSE            reduce using rule 3 (statements -> statement .)


state 4

    (4) statement -> create_database_statement . SEMICOLON

    SEMICOLON       shift and go to state 46


state 5

    (5) statement -> use_statement . SEMICOLON

    SEMICOLON       shift and go to state 47


state 6

    (6) statement -> declare_statement . SEMICOLON

    SEMICOLON       shift and go to state 48


state 7

    (7) statement -> set_statement . SEMICOLON

    SEMICOLON       shift and go to state 49


state 8

    (8) statement -> create_table_statement . SEMICOLON

    SEMICOLON       shift and go to state 50


state 9

    (9) statement -> select_statement . SEMICOLON

    SEMICOLON       shift and go to state 51


state 10

    (10) statement -> insert_statement . SEMICOLON

    SEMICOLON       shift and go to state 52


state 11

    (11) statement -> create_function_statement . SEMICOLON

    SEMICOLON       shift and go to state 53


state 12

    (12) statement -> create_procedure_statement . SEMICOLON

    SEMICOLON       shift and go to state 54


state 13

    (13) statement -> call_function_statement . SEMICOLON

    SEMICOLON       shift and go to state 55


state 14

    (14) statement -> alter_table_statement . SEMICOLON

    SEMICOLON       shift and go to state 56


state 15

    (15) statement -> if_statement . SEMICOLON

    SEMICOLON       shift and go to state 57


state 16

    (16) statement -> exec_statement . SEMICOLON

    SEMICOLON       shift and go to state 58


state 17

    (17) statement -> drop_table_statement . SEMICOLON

    SEMICOLON       shift and go to state 59


state 18

    (18) statement -> update_statement . SEMICOLON

    SEMICOLON       shift and go to state 60


state 19

    (19) statement -> while_statement . SEMICOLON

    SEMICOLON       shift and go to state 61


state 20

    (20) statement -> truncate_statement . SEMICOLON

    SEMICOLON       shift and go to state 62


state 21

    (21) statement -> return_statement . SEMICOLON

    SEMICOLON       shift and go to state 63


state 22

    (22) statement -> delete_statement . SEMICOLON

    SEMICOLON       shift and go to state 64


state 23

    (23) create_database_statement -> CREATE . DATA BASE NAME
    (30) create_table_statement -> CREATE . TABLE NAME L_PAREN properties R_PAREN
    (54) create_function_statement -> CREATE . FUNCTION NAME L_PAREN parameters R_PAREN RETURN type AS BEGIN statements END
    (55) create_function_statement -> CREATE . FUNCTION NAME L_PAREN R_PAREN RETURN type AS BEGIN statements END
    (56) create_procedure_statement -> CREATE . PROCEDURE NAME L_PAREN parameters R_PAREN AS BEGIN statements END
    (57) create_procedure_statement -> CREATE . PROCEDURE NAME L_PAREN R_PAREN AS BEGIN statements END

    DATA            shift and go to state 65
    TABLE           shift and go to state 66
    FUNCTION        shift and go to state 67
    PROCEDURE       shift and go to state 68


state 24

    (24) use_statement -> USE . NAME

    NAME            shift and go to state 69


state 25

    (25) declare_statement -> DECLARE . ID AS type
    (26) declare_statement -> DECLARE . ID type

    ID              shift and go to state 70


state 26

    (27) set_statement -> SET . assignments
    (28) assignments -> . assignments COMMA ID ASSIGN a
    (29) assignments -> . ID ASSIGN a

    ID              shift and go to state 72

    assignments                    shift and go to state 71

state 27

    (39) select_statement -> SELECT . columns FROM NAME
    (40) select_statement -> SELECT . columns FROM NAME WHERE a
    (42) columns -> . columns COMMA column
    (43) columns -> . columns COMMA column POINT column
    (44) columns -> . column POINT column
    (45) columns -> . column
    (46) column -> . TIMES
    (47) column -> . NAME
    (48) column -> . case_statement
    (49) column -> . call_function_statement
    (50) column -> . if_statement NAME
    (51) column -> . a NAME
    (79) case_statement -> . CASE when_statements END NAME
    (117) call_function_statement -> . function_name_prod L_PAREN vals R_PAREN
    (118) call_function_statement -> . function_name_prod L_PAREN R_PAREN
    (119) call_function_statement -> . CAS L_PAREN a AS type R_PAREN
    (64) if_statement -> . IF a THEN statements END IF
    (65) if_statement -> . IF a THEN statements ELSE statements END IF
    (66) if_statement -> . IF L_PAREN a COMMA a COMMA a R_PAREN
    (88) a -> . a OR b
    (89) a -> . b
    (120) function_name_prod -> . HOY
    (121) function_name_prod -> . CONCATENA
    (122) function_name_prod -> . SUBSTRAER
    (123) function_name_prod -> . CONTAR
    (124) function_name_prod -> . SUMA
    (90) b -> . b AND c
    (91) b -> . c
    (92) c -> . NOT_SIGN d
    (93) c -> . d
    (94) d -> . d EQUALS e
    (95) d -> . d NOT_EQ e
    (96) d -> . d LESS_THAN e
    (97) d -> . d GREATER_THAN e
    (98) d -> . d LESS_EQ e
    (99) d -> . d GREATER_EQ e
    (100) d -> . e
    (101) e -> . e PLUS f
    (102) e -> . e MINUS f
    (103) e -> . f
    (104) f -> . f TIMES g
    (105) f -> . f DIVIDE g
    (106) f -> . g
    (107) g -> . MINUS h
    (108) g -> . h
    (109) h -> . INTEGER_VALUE
    (110) h -> . DECIMAL_VALUE
    (111) h -> . STRING
    (112) h -> . ID
    (113) h -> . NAME
    (114) h -> . L_PAREN a R_PAREN
    (115) h -> . exec_statement
    (116) h -> . call_function_statement
    (67) exec_statement -> . EXEC NAME vals
    (68) exec_statement -> . EXEC NAME args
    (69) exec_statement -> . EXEC NAME

    TIMES           shift and go to state 77
    NAME            shift and go to state 74
    CASE            shift and go to state 81
    CAS             shift and go to state 31
    IF              shift and go to state 34
    HOY             shift and go to state 40
    CONCATENA       shift and go to state 41
    SUBSTRAER       shift and go to state 42
    CONTAR          shift and go to state 43
    SUMA            shift and go to state 44
    NOT_SIGN        shift and go to state 85
    MINUS           shift and go to state 89
    INTEGER_VALUE   shift and go to state 92
    DECIMAL_VALUE   shift and go to state 93
    STRING          shift and go to state 94
    ID              shift and go to state 95
    L_PAREN         shift and go to state 82
    EXEC            shift and go to state 35

    columns                        shift and go to state 73
    a                              shift and go to state 75
    column                         shift and go to state 76
    case_statement                 shift and go to state 78
    call_function_statement        shift and go to state 79
    if_statement                   shift and go to state 80
    function_name_prod             shift and go to state 30
    b                              shift and go to state 83
    c                              shift and go to state 84
    d                              shift and go to state 86
    e                              shift and go to state 87
    f                              shift and go to state 88
    g                              shift and go to state 90
    h                              shift and go to state 91
    exec_statement                 shift and go to state 96

state 28

    (41) insert_statement -> INSERT . INTO NAME L_PAREN columns R_PAREN VALUES L_PAREN vals R_PAREN

    INTO            shift and go to state 97


state 29

    (125) return_statement -> RETURN . a
    (88) a -> . a OR b
    (89) a -> . b
    (90) b -> . b AND c
    (91) b -> . c
    (92) c -> . NOT_SIGN d
    (93) c -> . d
    (94) d -> . d EQUALS e
    (95) d -> . d NOT_EQ e
    (96) d -> . d LESS_THAN e
    (97) d -> . d GREATER_THAN e
    (98) d -> . d LESS_EQ e
    (99) d -> . d GREATER_EQ e
    (100) d -> . e
    (101) e -> . e PLUS f
    (102) e -> . e MINUS f
    (103) e -> . f
    (104) f -> . f TIMES g
    (105) f -> . f DIVIDE g
    (106) f -> . g
    (107) g -> . MINUS h
    (108) g -> . h
    (109) h -> . INTEGER_VALUE
    (110) h -> . DECIMAL_VALUE
    (111) h -> . STRING
    (112) h -> . ID
    (113) h -> . NAME
    (114) h -> . L_PAREN a R_PAREN
    (115) h -> . exec_statement
    (116) h -> . call_function_statement
    (67) exec_statement -> . EXEC NAME vals
    (68) exec_statement -> . EXEC NAME args
    (69) exec_statement -> . EXEC NAME
    (117) call_function_statement -> . function_name_prod L_PAREN vals R_PAREN
    (118) call_function_statement -> . function_name_prod L_PAREN R_PAREN
    (119) call_function_statement -> . CAS L_PAREN a AS type R_PAREN
    (120) function_name_prod -> . HOY
    (121) function_name_prod -> . CONCATENA
    (122) function_name_prod -> . SUBSTRAER
    (123) function_name_prod -> . CONTAR
    (124) function_name_prod -> . SUMA

    NOT_SIGN        shift and go to state 85
    MINUS           shift and go to state 89
    INTEGER_VALUE   shift and go to state 92
    DECIMAL_VALUE   shift and go to state 93
    STRING          shift and go to state 94
    ID              shift and go to state 95
    NAME            shift and go to state 99
    L_PAREN         shift and go to state 82
    EXEC            shift and go to state 35
    CAS             shift and go to state 31
    HOY             shift and go to state 40
    CONCATENA       shift and go to state 41
    SUBSTRAER       shift and go to state 42
    CONTAR          shift and go to state 43
    SUMA            shift and go to state 44

    a                              shift and go to state 98
    b                              shift and go to state 83
    c                              shift and go to state 84
    d                              shift and go to state 86
    e                              shift and go to state 87
    f                              shift and go to state 88
    g                              shift and go to state 90
    h                              shift and go to state 91
    exec_statement                 shift and go to state 96
    call_function_statement        shift and go to state 100
    function_name_prod             shift and go to state 30

state 30

    (117) call_function_statement -> function_name_prod . L_PAREN vals R_PAREN
    (118) call_function_statement -> function_name_prod . L_PAREN R_PAREN

    L_PAREN         shift and go to state 101


state 31

    (119) call_function_statement -> CAS . L_PAREN a AS type R_PAREN

    L_PAREN         shift and go to state 102


state 32

    (62) alter_table_statement -> ALTER . TABLE NAME ADD COLUMN NAME type
    (63) alter_table_statement -> ALTER . TABLE NAME DROP COLUMN NAME

    TABLE           shift and go to state 103


state 33

    (72) drop_table_statement -> DROP . TABLE NAME

    TABLE           shift and go to state 104


state 34

    (64) if_statement -> IF . a THEN statements END IF
    (65) if_statement -> IF . a THEN statements ELSE statements END IF
    (66) if_statement -> IF . L_PAREN a COMMA a COMMA a R_PAREN
    (88) a -> . a OR b
    (89) a -> . b
    (90) b -> . b AND c
    (91) b -> . c
    (92) c -> . NOT_SIGN d
    (93) c -> . d
    (94) d -> . d EQUALS e
    (95) d -> . d NOT_EQ e
    (96) d -> . d LESS_THAN e
    (97) d -> . d GREATER_THAN e
    (98) d -> . d LESS_EQ e
    (99) d -> . d GREATER_EQ e
    (100) d -> . e
    (101) e -> . e PLUS f
    (102) e -> . e MINUS f
    (103) e -> . f
    (104) f -> . f TIMES g
    (105) f -> . f DIVIDE g
    (106) f -> . g
    (107) g -> . MINUS h
    (108) g -> . h
    (109) h -> . INTEGER_VALUE
    (110) h -> . DECIMAL_VALUE
    (111) h -> . STRING
    (112) h -> . ID
    (113) h -> . NAME
    (114) h -> . L_PAREN a R_PAREN
    (115) h -> . exec_statement
    (116) h -> . call_function_statement
    (67) exec_statement -> . EXEC NAME vals
    (68) exec_statement -> . EXEC NAME args
    (69) exec_statement -> . EXEC NAME
    (117) call_function_statement -> . function_name_prod L_PAREN vals R_PAREN
    (118) call_function_statement -> . function_name_prod L_PAREN R_PAREN
    (119) call_function_statement -> . CAS L_PAREN a AS type R_PAREN
    (120) function_name_prod -> . HOY
    (121) function_name_prod -> . CONCATENA
    (122) function_name_prod -> . SUBSTRAER
    (123) function_name_prod -> . CONTAR
    (124) function_name_prod -> . SUMA

    L_PAREN         shift and go to state 106
    NOT_SIGN        shift and go to state 85
    MINUS           shift and go to state 89
    INTEGER_VALUE   shift and go to state 92
    DECIMAL_VALUE   shift and go to state 93
    STRING          shift and go to state 94
    ID              shift and go to state 95
    NAME            shift and go to state 99
    EXEC            shift and go to state 35
    CAS             shift and go to state 31
    HOY             shift and go to state 40
    CONCATENA       shift and go to state 41
    SUBSTRAER       shift and go to state 42
    CONTAR          shift and go to state 43
    SUMA            shift and go to state 44
